fix: 修复 refresh 接口
